--- a/commands.html
+++ b/commands.html
@@ -17,7 +17,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:title" content="Swinger">
 <meta property="og:description" content="A bot with fun, moderation and utilities commands.">
-<meta property="og:url" content="https://discord.gg/gU7XAxTpX5">
+<meta property="og:url" content="https://discord.gg/UD7db9wB">
 
 </head>
 
