--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 <p id="footer-copyright">2021 All rights reserved.</p>
 
-<a href="https://creper92.tk"><p id="footer-credits">&#8883 Website by krazyman20#6518</p></a>
+<a href="https://discord.gg/e5PFCF2mTB"><p id="footer-credits">&#8883 Website by krazyman20#6518</p></a>
 
 </footer>
 
