--- a/developers.html
+++ b/developers.html
@@ -78,7 +78,7 @@
 
 <p id="footer-copyright">2021 All rights reserved.</p>
 
-<a href="https://discord.gg/gU7XAxTpX5"><p id="footer-credits"> Website by krazyman20#6518</p></a>
+<a href="https://discord.gg/e5PFCF2mTB"><p id="footer-credits"> Website by krazyman20#6518</p></a>
 
 </footer>
 
