--- a/commands.html
+++ b/commands.html
@@ -221,7 +221,7 @@
 
 <p id="footer-copyright">2021 All rights reserved.</p>
 
-<a href="https://discord.gg/UD7db9wB"><p id="footer-credits"> Website by krazyman20#6518</p></a>
+<a href="https://discord.gg/e5PFCF2mTB"><p id="footer-credits"> Website by krazyman20#6518</p></a>
 
 </footer>
 
