--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 <div id="main-buttons" style="margin-top: 200px;">
 
-<a href="https://discord.gg/gU7XAxTpX5"><button id="main-button-2-1">Join support server</button></a>  
+<a href="https://discord.gg/b4QYAkMGqY"><button id="main-button-2-1">Join support server</button></a>  
 
 </div>
 
