--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <meta name="keywords" content="capital club, diwas atreya, diwas team, atreya">
 <meta name="author" content="Diwas">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta property="og:title" content="Swinger Bot">
+<meta property="og:title" content="Music bot">
 <meta property="og:description" content="A discord bot with fun, moderation and utilities commands.">
-<meta property="og:url" content="https://discord.gg/gU7XAxTpX5">
+<meta property="og:url" content="https://discord.gg/gps5WpYBhR">
 
 </head>
 
