--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 <meta charset="utf-8">
 <meta name="description" content="A discord bot with fun, moderation and utilities commands.">
-<meta name="keywords" content="capital club, diwas atreya, diwas team, atreya">
+<meta name="keywords" content="krazyman20#6518">
 <meta name="author" content="Diwas">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:title" content="Music bot">
-<meta property="og:description" content="A discord bot with fun, moderation and utilities commands.">
+<meta property="og:description" content="A discord bot that can play music for your server's voice channel.">
 <meta property="og:url" content="https://discord.gg/gps5WpYBhR">
 
 </head>
@@ -64,7 +64,7 @@
 
 <p id="main-info-1">Hello everyone.This is a Music bot that runs on Discord.Since nowdays music bots are shutting down, this bot would be helpful in playing music for voice channels.So please invite my bot to show me your support.</p>
 
-<p id="main-info-2">Use the prefix - for example (-help) 
+<p id="main-info-2">Use the prefix  -  for example (-help) 
 </p> <br>
 
 </div>
