--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <title>Music bot</title>
 
 <meta charset="utf-8">
-<meta name="description" content="A discord bot with fun, moderation and utilities commands.">
+<meta name="description" content="A discord bot that can play music for your server's voice channel.">
 <meta name="keywords" content="krazyman20#6518">
-<meta name="author" content="Diwas">
+<meta name="author" content="krazyman20">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:title" content="Music bot">
 <meta property="og:description" content="A discord bot that can play music for your server's voice channel.">
