--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 <br id="intro">
 
-<p id="main-info-1">Hello everyone.This is a Music bot that runs on Discord.Since nowdays music bots are shutting down, this bot would be helpful in playing music for voice channels.So please invite my bot to show me your support.</p>
+<p id="main-info-1">Hello everyone.This is a Music bot that runs on Discord.Since nowdays music bots are shutting down, this bot would be helpful in playing music for your server.So please invite my bot which will work forever.</p>
 
 <p id="main-info-2">Use the prefix  -  for example (-help) 
 </p> <br>
