--- a/commands.html
+++ b/commands.html
@@ -65,7 +65,7 @@
 
 <p id="commands-name">-help</p>
 
-<p id="commands-desc">Display all commands and descriptions | Aliases.</p>
+<p id="commands-desc">Display all commands and descriptions.</p>
 
 </div>
 
